# GainsTradeTelegramBot

./: README.md
gains-api-rs/: Cargo.toml  Dockerfile  README.md  binsend.sh
gains-api-rs/gains_abi/: GNSMultiCollatDiamond_abi.json  GNSPairInfosV6_1_abi.json
gains-api-rs/gains_abi/facets/GNSBorrowing/: GNSBorrowing_abi.json
gains-api-rs/gains_abi/facets/GNSFeeTiers/: overview.md
gains-api-rs/gains_abi/facets/GNSPairsStorage/: GNSPairsStorage_abi.json  overview.md
gains-api-rs/gains_abi/facets/GNSPriceAggregator/: GNSPriceAggregator_abi.json  overview.md
gains-api-rs/gains_abi/testnet/: GainsNetworkCollateralDAI_abi.json  GainsNetworkCollateralUSDC_abi.json
gains-api-rs/src/: errors.rs  lib.rs  main.rs
gains-api-rs/src/blockchain_constants/: chainids.rs  mod.rs  token_constants.rs
gains-api-rs/src/contracts/: arbitrum.rs  diamonds.rs  mod.rs  polygon.rs  sepolia.rs
gains-api-rs/src/database/: getdistribution.rs  getkeys.rs  mod.rs
gains-api-rs/src/gains/: contracts.rs  errors.rs  mod.rs
gains-api-rs/src/gains/converters/: mod.rs  (+2 more)
gains-api-rs/src/native/: approve.rs  balanceof.rs  getallowance.rs  getblocktime.rs  getdecimals.rs  getgasbalance.rs  mod.rs
gains-api-rs/src/nodes/: constants.rs
gains-api-rs/src/proprietary/: getethsepolia.rs  mod.rs
gains-api-rs/src/routes/: mod.rs
gains-api-rs/src/telegram_constants/: constants.rs
gains-multicall-cacher/: Cargo.toml  README.md
gains-multicall-cacher/gains_abi/: GFarmTradingStorageV5_abi.json  GNSTradingCallbacks_abi.json  GNSTrading_abi.json
gains-multicall-cacher/src/: lib.rs  main.rs
gains-multicall-cacher/src/multicalls/: getpairmaxleverage.rs  getpairminleverage.rs  mod.rs  multicall.txt  pairtradersarray.sol  utils.rs
(+516 files in other folders)
