[package]
name = "hoot_core_api"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.5"
axum-macros = "0.4.1"
web3 = "0.19.0"
orion = "0.17.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0.3", features = ["abigen", "ws", "rustls", "etherscan"] }
tiny-keccak = "2.0"
rustc-hex = "2.0"
anyhow = "1.0"
getrandom = { version = "0.2.9", features = ["wasm-bindgen", "js"] }
bs58 = "0.5.0"
directories = "5.0"
rpassword = "7.2.0"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["json"] }
dotenv = "0.15.0"
num-format = "0.4.0"
mongodb = "2.0.0"
bson = "2.6.1"
hex = "0.4.3"
futures = "0.3.28"
ethcontract = "0.25.0"
parking_lot = "0.12.1"
once_cell = "1.18.0"
primitive-types = "0.12.1"
rust_decimal = "1.31.0"
rust_decimal_macros = "1.31"
web3-unit-converter = "0.1.1"
lazy_static = "1.4.0"
env_logger = "0.11.3"
log = "0.4.21"
teloxide = "0.12.2"
